[package]
name = "py_literal"
version = "0.2.0"
authors = ["Jim Turner <py_literal@turner.link>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/jturner314/py_literal"
description = "Read and write Python literals"
keywords = ["python"]
categories = ["parser-implementations", "encoding"]
readme = "README.md"

[badges]
travis-ci = { repository = "jturner314/py_literal", branch = "master" }

[dependencies]
num-bigint = "0.2"
num-complex = "0.2"
num-traits = "0.2"
pest = "1.0"
pest_derive = "1.0"
quick-error = "1.2"

[dev-dependencies]
num = "0.2"
